--- a/design.css
+++ b/design.css
@@ -142,3 +142,34 @@ p {
 .button {
 	padding: 25px 0 10px;
 }
+
+@media screen and (min-width: 960px){
+	body {
+		min-height: 100vh;
+	}
+
+	.container {
+		display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+		justify-content: center;
+        width: 100%;
+		max-width: 960px;
+	} 
+
+	.article-1 {
+		border-radius: 10px 0 0 10px;
+	}
+
+	.article-2 {
+		padding-right: 55px;
+	}
+
+	.article-3 {
+		border-radius: 0 10px 10px 0;
+		padding-right: 35px;
+	}
+
+	.button {
+		padding-top: 100px;
+	}
+}
