--- a/design.css
+++ b/design.css
@@ -117,26 +117,41 @@ p {
 	font-family: 'Lexend Deca', sans-serif;
 	font-size: 1rem;
 	font-weight: 400;
+	background-color: hsl(0, 0%, 95%);
 	padding: 15px 32px;
 	border-radius: 2rem;
 	border: none;
 }
 
+.btn:hover {
+	padding: 13px 30px;
+	cursor: pointer;
+	border: 2px solid hsl(0, 0%, 95%);
+	color: hsl(0, 0%, 95%);
+}
+
 .btn-1 {
 	color:  hsl(31, 77%, 52%);
 }
-/* .btn-1:hover {
-	cursor: pointer;
-	border: 1px solid hsl(0, 0%, 95%);
-	opacity: 0;
-} */
+
+.btn-1:hover {
+	background-color: hsl(31, 77%, 52%);
+}
 
 .btn-2 {
 	color:  hsl(184, 100%, 22%);
+} 
+
+.btn-2:hover {
+	background-color: hsl(184, 100%, 22%);
 }
 
 .btn-3 {
 	color: hsl(179, 100%, 13%);
+}
+
+.btn-3:hover {
+	background-color: hsl(179, 100%, 13%);
 }
 
 .button {
